--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Portfolio With Tailwind CSS</title>
     <link href="src/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap"
+      rel="stylesheet" />
+    <!-- Animate On Scroll (AOS) -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 800,
+        once: true, // animasi cuma sekali pas muncul
+      });
+    </script>
   </head>
   <body class="bg-gray-950 text-white">
     <!-- Header  Start -->
@@ -107,7 +121,7 @@
             </p>
             <a
               href="#"
-              class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-md hover:shadow-slate-600 hover:opacity-80 transition duration-300 ease-in-out"
+              class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full hover:shadow-md hover:bg-primary hover:opacity-80 transition duration-300 ease-in-out"
               >Contact Us</a
             >
           </div>
@@ -275,62 +289,139 @@
             <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
             <h2 class="font-bold text-white text-3xl mb-4">Lastest Project</h2>
             <p class="font-medium text-md text-slate-400">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Id quod
-              amet ex assumenda sed inventore? Qui nemo consectetur nulla
-              laudantium.
+              here are some of our latest projects that showcase our expertise
+              and creativity in the field of AI and technology. From innovative
+              applications to cutting-edge solutions.
             </p>
           </div>
         </div>
         <!-- cm bates doang -->
         <div
           class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
-          <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md shadow-slate-700 overflow-hidden">
-              <img src="src/img/mavuika.png" alt="example" width="w-full" />
+          <!-- ======= Portfolio Card (AI-Style) ======= -->
+          <div
+            data-aos="fade-up"
+            data-aos-delay="100"
+            class="group mb-1 p-2 md:w-1/2">
+            <div
+              class="relative rounded-xl overflow-hidden bg-white/10 backdrop-blur-md border border-white/10 shadow-md shadow-black transform transition-all duration-500 hover:-translate-y-3 hover:shadow-xl hover:border-primary">
+              <!-- Gambar -->
+              <img
+                src="src/img/mavuika.png"
+                alt="Project"
+                class="w-full h-64 object-cover opacity-90 group-hover:opacity-70 transition duration-500" />
+
+              <!-- Overlay muncul pas hover -->
+              <div
+                class="absolute inset-0 flex flex-col items-center justify-center text-center opacity-0 group-hover:opacity-100 transition-all duration-500 bg-black/50 backdrop-blur-sm">
+                <h3
+                  class="text-white text-2xl font-semibold mb-3 tracking-wide">
+                  Mavuika AI
+                </h3>
+                <p class="text-slate-300 text-sm mb-4 px-4">
+                  Advanced Pyro Elemental AI project using deep learning to
+                  simulate adaptive behaviors.
+                </p>
+                <button
+                  class="bg-primary text-white font-medium px-5 py-2 rounded-full hover:bg-primary transition-all">
+                  View Project
+                </button>
+              </div>
             </div>
-            <h3 class="font-semibold text-xl text-white mt-5 mb-3">
-              Project Title
-            </h3>
-            <p class="font-medium text-base text-slate-400">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam id
-              autem perspiciatis saepe.
-            </p>
           </div>
-          <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md shadow-slate-700 overflow-hidden">
-              <img src="src/img/raiden3.jpg" alt="example" width="w-full" />
+
+          <!-- ======= Portfolio Card (AI-Style) ======= -->
+          <div
+            data-aos="fade-up"
+            data-aos-delay="200"
+            class="group mb-1 p-2 md:w-1/2">
+            <div
+              class="relative rounded-xl overflow-hidden bg-white/10 backdrop-blur-md border border-white/10 shadow-md shadow-black transform transition-all duration-500 hover:-translate-y-3 hover:shadow-xl hover:border-primary">
+              <!-- Gambar -->
+              <img
+                src="src/img/raiden3.jpg"
+                alt="Project"
+                class="w-full h-64 object-cover opacity-90 group-hover:opacity-70 transition duration-500" />
+
+              <!-- Overlay muncul pas hover -->
+              <div
+                class="absolute inset-0 flex flex-col items-center justify-center text-center opacity-0 group-hover:opacity-100 transition-all duration-500 bg-black/50 backdrop-blur-sm">
+                <h3
+                  class="text-white text-2xl font-semibold mb-3 tracking-wide">
+                  Raiden Neural System
+                </h3>
+                <p class="text-slate-300 text-sm mb-4 px-4">
+                  An advanced AI-driven combat protocol inspired by neural
+                  synchronization and lightning-fast response systems.
+                </p>
+                <button
+                  class="bg-primary text-white font-medium px-5 py-2 rounded-full hover:bg-primary transition-all">
+                  View Project
+                </button>
+              </div>
             </div>
-            <h3 class="font-semibold text-xl text-white mt-5 mb-3">
-              Project Title
-            </h3>
-            <p class="font-medium text-base text-slate-400">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam id
-              autem perspiciatis saepe.
-            </p>
           </div>
-          <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md shadow-slate-700 overflow-hidden">
-              <img src="src/img/mavuika.png" alt="example" width="w-full" />
+
+          <div
+            data-aos="fade-up"
+            data-aos-delay="100"
+            class="group mb-1 p-2 md:w-1/2">
+            <div
+              class="relative rounded-xl overflow-hidden bg-white/10 backdrop-blur-md border border-white/10 shadow-md shadow-black transform transition-all duration-500 hover:-translate-y-3 hover:shadow-xl hover:border-primary">
+              <!-- Gambar -->
+              <img
+                src="src/img/mavuika.png"
+                alt="Project"
+                class="w-full h-64 object-cover opacity-90 group-hover:opacity-70 transition duration-500" />
+
+              <!-- Overlay muncul pas hover -->
+              <div
+                class="absolute inset-0 flex flex-col items-center justify-center text-center opacity-0 group-hover:opacity-100 transition-all duration-500 bg-black/50 backdrop-blur-sm">
+                <h3
+                  class="text-white text-2xl font-semibold mb-3 tracking-wide">
+                  Mavuika AI
+                </h3>
+                <p class="text-slate-300 text-sm mb-4 px-4">
+                  Advanced Pyro Elemental AI project using deep learning to
+                  simulate adaptive behaviors.
+                </p>
+                <button
+                  class="bg-primary text-white font-medium px-5 py-2 rounded-full hover:bg-primary transition-all">
+                  View Project
+                </button>
+              </div>
             </div>
-            <h3 class="font-semibold text-xl text-white mt-5 mb-3">
-              Project Title
-            </h3>
-            <p class="font-medium text-base text-slate-400">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam id
-              autem perspiciatis saepe.
-            </p>
           </div>
-          <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md shadow-slate-700 overflow-hidden">
-              <img src="src/img/raiden3.jpg" alt="example" width="w-full" />
+          <!-- ======= Portfolio Card (AI-Style) ======= -->
+          <div
+            data-aos="fade-up"
+            data-aos-delay="200"
+            class="group mb-12 p-2 md:w-1/2">
+            <div
+              class="relative rounded-xl overflow-hidden bg-white/10 backdrop-blur-md border border-white/10 shadow-md shadow-black transform transition-all duration-500 hover:-translate-y-3 hover:shadow-xl hover:border-primary">
+              <!-- Gambar -->
+              <img
+                src="src/img/raiden3.jpg"
+                alt="Project"
+                class="w-full h-64 object-cover opacity-90 group-hover:opacity-70 transition duration-500" />
+
+              <!-- Overlay muncul pas hover -->
+              <div
+                class="absolute inset-0 flex flex-col items-center justify-center text-center opacity-0 group-hover:opacity-100 transition-all duration-500 bg-black/50 backdrop-blur-sm">
+                <h3
+                  class="text-white text-2xl font-semibold mb-3 tracking-wide">
+                  Raiden Neural System
+                </h3>
+                <p class="text-slate-300 text-sm mb-4 px-4">
+                  An advanced AI-driven combat protocol inspired by neural
+                  synchronization and lightning-fast response systems.
+                </p>
+                <button
+                  class="bg-primary text-white font-medium px-5 py-2 rounded-full hover:bg-primary transition-all">
+                  View Project
+                </button>
+              </div>
             </div>
-            <h3 class="font-semibold text-xl text-white mt-5 mb-3">
-              Project Title
-            </h3>
-            <p class="font-medium text-base text-slate-400">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam id
-              autem perspiciatis saepe.
-            </p>
           </div>
         </div>
       </div>
@@ -339,7 +430,7 @@
 
     <!-- Client section start -->
     <section id="clients" class="pt-36 pb-32 bg-gray-300">
-      <div data-aos="fade-up" data-aos-duration="2000">
+      <div data-aos="fade-up" data-aos-duration="800">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-16">
             <div class="container">
@@ -347,7 +438,7 @@
               <h2
                 class="font-bold text-black text-3xl mb-4 sm:text-4xl lg:text-5xl"
                 data-aos="zoom-in"
-                data-aos-duration="2000"
+                data-aos-duration="800"
                 data-aos-delay="300">
                 Collaboration With
               </h2>
@@ -369,7 +460,7 @@
               class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 ease-in-out hover:grayscale-0 hover:scale-105 hover:opacity-100 lg:mx-6 xl:mx-8">
               <img
                 data-aos="zoom-in"
-                data-aos-duration="1000"
+                data-aos-duration="900"
                 src="src/img/clients/google.svg"
                 alt="Google" />
             </a>
@@ -378,7 +469,7 @@
               class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 ease-in-out hover:grayscale-0 hover:scale-105 hover:opacity-100 lg:mx-6 xl:mx-8">
               <img
                 data-aos="zoom-in"
-                data-aos-duration="1000"
+                data-aos-duration="900"
                 src="src/img/clients/openai.svg"
                 alt="Google" />
             </a>
@@ -388,7 +479,7 @@
               class="max-w-[120px] w-28 mx-4 py-4 grayscale opacity-60 transition duration-500 ease-in-out hover:grayscale-0 hover:scale-105 hover:opacity-100 lg:mx-6 xl:mx-8">
               <img
                 data-aos="zoom-in"
-                data-aos-duration="1000"
+                data-aos-duration="900"
                 data-aos-delay="300"
                 src="src/img/clients/nvidia.svg"
                 alt="Google" />
@@ -398,7 +489,7 @@
               class="max-w-[120px] w-32 mx-4 py-4 grayscale opacity-60 transition duration-500 ease-in-out hover:grayscale-0 hover:scale-105 hover:opacity-100 lg:mx-6 xl:mx-8">
               <img
                 data-aos="zoom-in"
-                data-aos-duration="1000"
+                data-aos-duration="900"
                 data-aos-delay="400"
                 src="src/img/clients/CWF.svg"
                 alt="Google" />
@@ -408,7 +499,7 @@
               class="max-w-[200px] mx-4 py-4 grayscale opacity-60 transition duration-500 ease-in-out hover:grayscale-0 hover:scale-105 hover:opacity-100 lg:mx-6 xl:mx-8">
               <img
                 data-aos="zoom-in"
-                data-aos-duration="1000"
+                data-aos-duration="900"
                 data-aos-delay="600"
                 src="src/img/clients/hoyoverse.svg"
                 alt="Google" />
